--- a/KenticoCloud.Delivery/KenticoCloud.Delivery.csproj
+++ b/KenticoCloud.Delivery/KenticoCloud.Delivery.csproj
@@ -36,8 +36,8 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Reference Include="System.Web.Services">
-      <HintPath>..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5\System.Web.Services.dll</HintPath>
+    <Reference Include="Microsoft.Extensions.DependencyInjection">
+      <HintPath>..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.dependencyinjection\2.0.0\lib\netstandard2.0\Microsoft.Extensions.DependencyInjection.dll</HintPath>
     </Reference>
   </ItemGroup>
   
@@ -46,4 +46,5 @@
       <Version>2.1.1</Version>
     </PackageReference>
   </ItemGroup>
+
 </Project>
