--- a/KenticoCloud.Delivery/KenticoCloud.Delivery.csproj
+++ b/KenticoCloud.Delivery/KenticoCloud.Delivery.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Kentico Software</Authors>
     <Product>Kentico Cloud</Product>
     <Description>Kentico Cloud Delivery SDK</Description>
@@ -34,5 +34,16 @@
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <Reference Include="System.Web.Services">
+      <HintPath>..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5\System.Web.Services.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection">
+      <Version>2.1.1</Version>
+    </PackageReference>
+  </ItemGroup>
 </Project>
